# jalm

./: .gitignore  CODEGEN_V0.md  EFFECT_SYSTEM_V0.md  GRAMMAR_V0.md  HOST_ABI_V0.md  MIR_V0.md  MODULE_SYSTEM_V0.md  README.md  RUNTIME_V0.md  SPEC_MVP.md  STRUCTURED_CONCURRENCY_V0.md  TOOLING_V0.md  TYPE_SYSTEM_V0.md  issues.csv
abi/: host_abi_v0.wit
artifacts/: issues_import_log.json
examples/: bad_types.jalm  hello.jalm  match_if.jalm  struct_enum.jalm
jalmc/: Cargo.toml
jalmc/crates/jalm_ast/: Cargo.toml
jalmc/crates/jalm_ast/src/: lib.rs
jalmc/crates/jalm_codegen/: Cargo.toml
jalmc/crates/jalm_codegen/benches/: codegen.rs
jalmc/crates/jalm_codegen/src/: lib.rs
jalmc/crates/jalm_codegen/tests/: codegen_smoke.rs
jalmc/crates/jalm_effectcheck/: Cargo.toml
jalmc/crates/jalm_effectcheck/src/: lib.rs
jalmc/crates/jalm_formatter/: Cargo.toml
jalmc/crates/jalm_formatter/src/: lib.rs
jalmc/crates/jalm_parser/: Cargo.toml
jalmc/crates/jalm_parser/src/: lib.rs
jalmc/crates/jalm_runtime/: Cargo.toml
jalmc/crates/jalm_runtime/benches/: alloc.rs
jalmc/crates/jalm_syntax/: Cargo.toml
jalmc/crates/jalm_tests/: Cargo.toml
jalmc/crates/jalm_tests/src/: lib.rs
jalmc/crates/jalm_tests/tests/: .parser_roundtrip.rs.pending-snap  effectcheck.rs  host_abi.rs  parser_roundtrip.rs  typecheck.rs
jalmc/crates/jalm_typecheck/: Cargo.toml
jalmc/crates/jalmt/: Cargo.toml
jalmc/crates/jalmt/benches/: cli_noop.rs
jalmc/crates/jalmt/src/: main.rs
jalmc/crates/jalmt/tests/: cli.rs
scripts/: create_issues_from_csv.py
(+3 files in other folders)
