[package]
name = "jalm_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
jalm_parser = { path = "../jalm_parser" }
jalm_syntax = { path = "../jalm_syntax" }
jalm_formatter = { path = "../jalm_formatter" }
jalm_typecheck = { path = "../jalm_typecheck" }
jalm_effectcheck = { path = "../jalm_effectcheck" }
rowan = "0.15"
insta = { version = "1.34", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
